# fastapi-examples

./: README.md  main.py  pyproject.toml
fastapi_examples/routes/v1/: items.py
fastapi_examples/routes/v2/: items.py
