[tool.poetry]
name = "fastapi-examples"
version = "0.1.0"
description = ""
authors = ["Ryan Farrell <rfarrell@brightsign.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
